# AgentHarness

./: .gitignore  AGENTS.md  README.md  REVIEW.md
backend/: .env.example  README.md  environment.yml  pyproject.toml
backend/agentharness_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/api/: acceptance.py  agent_runs.py  archive.py  commands.py  coordinator.py  filesystem.py  gemini.py  prompts.py  reviews.py  tasks.py  workers.py
backend/app/core/: config.py  database.py  state_machine.py  workflow_actions.py
backend/app/models/: __init__.py  acceptance.py  command.py  common.py  prompt.py  review.py  task.py  worker.py
backend/app/prompts/: templates.py
backend/app/scheduler/: __init__.py  heartbeat.py  queue.py  runner.py  workers.py
backend/app/schemas/: acceptance.py  agent_run.py  command.py  coordinator.py  filesystem.py  gemini.py  prompt.py  review.py  task.py  worker.py  workflow.py
backend/scripts/: probe_claude_cli.py
backend/tests/: test_agent_run_service.py  test_archive_check.py  test_codex_worker_service.py  test_command_service.py  test_coordinator_api.py  test_coordinator_service.py  test_filesystem_service.py  test_gemini_brief_service.py  test_gemini_chat_service.py  test_gemini_facts_service.py  test_gemini_flow_matrix.py  test_gemini_service.py  test_gemini_worker_service.py  test_prompt_service.py  test_review_parser.py  test_state_machine.py  test_task_service.py  test_workers.py  test_workflow_action_service.py  test_workflow_actions.py  test_workflow_api.py
(+50 files in other folders)
